--- a/client/src/scss/thereyoubee/_app.scss
+++ b/client/src/scss/thereyoubee/_app.scss
@@ -37,6 +37,10 @@ i {
   }
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 // body {
 //   overflow-y: scroll;
 // }
