--- a/client/src/scss/thereyoubee/_loading.scss
+++ b/client/src/scss/thereyoubee/_loading.scss
@@ -8,7 +8,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 100;
   transition: opacity 500ms ease;
 }
 .app-loading-in {
